[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/DialogueEditor/EditorTheme.tres" type="Theme" id=1]
[ext_resource path="res://addons/DialogueEditor/DialogueEditor.gd" type="Script" id=2]

[node name="DialogueEditor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 40.0
margin_right = 8.0
margin_bottom = -40.0
mouse_filter = 2
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GraphEdit" type="GraphEdit" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
right_disconnects = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "
"
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 708.249
margin_top = 28.1189
margin_right = 822.249
margin_bottom = 142.119
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileSelect" type="OptionButton" parent="."]
margin_top = 50.0
margin_right = 192.0
margin_bottom = 71.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClearGraph" type="Button" parent="."]
margin_left = 792.0
margin_top = 24.0
margin_right = 906.0
margin_bottom = 45.0
text = "Clear Graph"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="Button" parent="."]
margin_left = 648.0
margin_top = 24.0
margin_right = 762.0
margin_bottom = 45.0
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_left = 22.0
margin_top = 82.0
margin_right = 160.0
margin_bottom = 103.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IndexFiles" type="Button" parent="VBoxContainer2"]
margin_right = 138.0
margin_bottom = 21.0
text = "Update file list"

[node name="AddQuest" type="Button" parent="."]
margin_left = 520.0
margin_top = 24.0
margin_right = 626.0
margin_bottom = 45.0
text = "Add quest"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BranchButton" type="Button" parent="."]
margin_left = 520.0
margin_top = 56.0
margin_right = 634.0
margin_bottom = 86.0
rect_min_size = Vector2( 20, 30 )
text = "Add branch"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer3" type="VBoxContainer" parent="."]
margin_left = 343.8
margin_top = 21.0595
margin_right = 449.8
margin_bottom = 42.0595
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TranslationFiles" type="OptionButton" parent="."]
margin_left = 252.707
margin_top = 52.0172
margin_right = 488.707
margin_bottom = 74.0172
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="connection_request" from="GraphEdit" to="." method="_on_graph_connection_request"]
[connection signal="disconnection_request" from="GraphEdit" to="." method="_on_graph_disconnection_request"]
[connection signal="node_selected" from="GraphEdit" to="." method="_on_node_selected"]
[connection signal="item_selected" from="FileSelect" to="." method="_on_file_selected"]
[connection signal="pressed" from="ClearGraph" to="." method="clear_graph"]
[connection signal="pressed" from="Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="VBoxContainer2/IndexFiles" to="." method="index_files"]
[connection signal="pressed" from="AddQuest" to="." method="_on_add_quest"]
[connection signal="pressed" from="BranchButton" to="." method="_on_add_branch_pressed"]
[connection signal="item_selected" from="TranslationFiles" to="." method="update_translations"]
